# eeg-finetuner

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
eeg_finetuner/: __init__.py  data.py  experiment.py  finetune.py  generate_model_card.py  main.py  metrics.py  task_head.py
eeg_finetuner/foundation_model/: __init__.py
eeg_finetuner/foundation_model/labram/: __init__.py
eeg_finetuner/lightning_logs/version_1/: hparams.yaml  metrics.csv
eeg_finetuner/lightning_logs/version_1/checkpoints/: epoch=9-step=40.ckpt
eeg_finetuner/preprocessing_configs/: ds005514.yaml  ds005863.yaml
tests/: test_dataset.py  test_model_embedding.py
